# pico

./: readme.md
ascii_matrix/: CMakeLists.txt  main.c  packet.py
led/: CMakeLists.txt  led.c
led/.cache/clangd/index/: led.c.4621389233631A7F.idx
oled_screen/: CMakeLists.txt  screen.c
ws2812/: CMakeLists.txt  ws2812.c
ws2812/.cache/clangd/index/: ws2812.c.A99C04A91456F5D1.idx
